syntax = "proto3";
package onedb;
import "data.proto";

option java_package = "com.hufudb.onedb.proto";
option java_outer_classname = "Expression";

enum OperatorType {
  REF = 0;
  LITERAL = 1;
  // for binary
  PLUS = 2;
  MINUS = 3;
  TIMES = 4;
  DIVIDE = 5;
  MOD = 6;
  GT = 7;
  GE = 8;
  LT = 9;
  LE = 10;
  EQ = 11;
  NE = 12;
  AND = 13;
  OR = 14;
  // for unary
  AS = 15;
  NOT = 16;
  PLUS_PRE = 17;
  MINUS_PRE = 18;
  IS_NULL = 19;
  IS_NOT_NULL = 20;
  // for mutliple
  CASE = 21;
  SRAG = 22;
  SEARCH = 23;
  // for functions
  SCALAR_FUNC = 24;
  AGG_FUNC = 25;
}

message ExpressionProto {
  OperatorType opType = 1;
  ColumnType outType = 2;
  repeated ExpressionProto in = 3;
  Modifier level = 4;
  oneof value {
    bool b = 5;
    int32 i32 = 6;
    int64 i64 = 7;
    float f32 = 8;
    double f64 = 9;
    string str = 10;
    bytes blob = 11;
  }
}