syntax = "proto3";
package onedb;

import "data.proto";
import "plan.proto";

option java_package = "com.hufudb.onedb.proto";
option java_outer_classname = "OneDBService";


message GeneralRequest {
  string value = 1;
}

message GeneralResponse {
  int32 status = 1;
  string msg = 2;
}

message OwnerInfo {
  int32 id = 1;
  string endpoint = 2;
}

service Service {
  rpc getOwnerInfo(GeneralRequest) returns (OwnerInfo);
  rpc AddOwner(OwnerInfo) returns (GeneralResponse);
  rpc GetTableHeader(GeneralRequest) returns (SchemaProto);
  rpc GetAllLocalTable(GeneralRequest) returns (TableSchemaListProto);
  rpc Query(QueryPlanProto) returns (stream DataSetProto);
}